docker with java 11 compatibilities.